--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "data-generator",
+  "name": "@repo/benchmark",
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "tsx ./index.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@faker-js/faker": "^9.9.0",
-    "csv-parse": "^6.1.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/types": "*",
-    "@repo/typescript-config": "*",
-    "tsx": "^4.20.3"
+    "@repo/typescript-config": "*"
   }
 }
