--- a/packages/singlestore/package.json
+++ b/packages/singlestore/package.json
@@ -7,6 +7,7 @@
     "migrate": "drizzle-kit migrate",
     "push": "drizzle-kit push",
     "data:load": "dotenv -- tsx ./scripts/load-data.ts",
+    "benchmark:run": "dotenv -- tsx ./scripts/run-benchmark.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
@@ -15,13 +16,14 @@
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "drizzle-zod": "^0.8.2",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.2"
   },
   "devDependencies": {
+    "@repo/benchmark": "*",
     "@repo/eslint-config": "*",
     "@repo/types": "*",
     "@repo/typescript-config": "*",
-    "@types/node": "^24.0.12",
+    "@types/node": "^24.1.0",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.31.4"
   }
